--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=
 
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyBrfx_4GtNtwV7USk-YSZwbhyuQ-Fr7Gig
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=fir-test-a337e.firebaseapp.com
@@ -5,3 +6,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=fir-test-a337e
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=fir-test-a337e.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=754117310951
 NEXT_PUBLIC_FIREBASE_APP_ID=1:754117310951:web:53eeb20d6b7d366c536542
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
